--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,10 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>1</title>
+    <title>登录</title>
+<!--    <script src="https://cdn.staticfile.org/vue/2.2.2/vue.min.js" ></script>-->
+    <script src="../static/plugins/vue.min.js" type="text/javascript"></script>
 </head>
 <body>
-<p>你好</p>
+<p>你好吗1</p>
+<div id="app">
+    {{ message }}
+</div>
+<div id="app-2">
+  <span v-bind:title="message">
+    鼠标悬停几秒钟查看此处动态绑定的提示信息！
+  </span>
+</div>
+<script>
+    var app = new Vue({
+      el: '#app',
+      data: {
+        message: 'Hello Vue!'
+      }
+    });
 
+    var app2 = new Vue({
+      el: '#app-2',
+      data: {
+        message: '页面加载于 ' + new Date().toLocaleString()
+      }
+    })
+</script>
 </body>
 </html>
