--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>登录</title>
-<!--    <script src="https://cdn.staticfile.org/vue/2.2.2/vue.min.js" ></script>-->
-    <script src="../static/plugins/vue.min.js" type="text/javascript"></script>
+   <!-- <script src="https://cdn.staticfile.org/vue/2.2.2/vue.min.js" ></script> -->
+    <script src="plugins/vue.js"></script>
+    <script src="plugins/a.js"></script>
 </head>
 <body>
-<p>你好吗1</p>
+<p>你好吗</p>
 <div id="app">
     {{ message }}
 </div>
@@ -16,7 +17,7 @@
     鼠标悬停几秒钟查看此处动态绑定的提示信息！
   </span>
 </div>
-<script>
+<script type="text/javascript">
     var app = new Vue({
       el: '#app',
       data: {
@@ -27,7 +28,7 @@
     var app2 = new Vue({
       el: '#app-2',
       data: {
-        message: '页面加载于 ' + new Date().toLocaleString()
+        message: '页面加载于1 ' + new Date().toLocaleString()
       }
     })
 </script>
