每天进步一小步

--- a/src/main/resources/templates/vue/login.html
+++ b/src/main/resources/templates/vue/login.html
@@ -4,9 +4,8 @@
 		<meta charset="UTF-8">
 		<title>登录</title>
 		<!-- <script src="https://cdn.staticfile.org/vue/2.2.2/vue.min.js" ></script> -->
-		<script src="../plugins/vue.js"></script>
-		<script src="../plugins/a.js"></script>
-		<script src="../plugins/echarts-3.7.1/echarts.min.js"></script>
+		<script src="../static/plugins/vue.js"></script>
+		<script src="../static/plugins/echarts-3.7.1/echarts.min.js"></script>
 	</head>
 	<style type="text/css">
 		html,
